welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:5: error: Invalid literal number
    x=2x
      ^sumDouble:5: error: illegal start of simple expression
    x=2x
      ^